--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# TV Script Generation\n",
     "In this project, you'll generate your own [Simpsons](https://en.wikipedia.org/wiki/The_Simpsons) TV scripts using RNNs.  You'll be using part of the [Simpsons dataset](https://www.kaggle.com/wcukierski/the-simpsons-by-the-data) of scripts from 27 seasons.  The Neural Network you'll build will generate a new TV script for a scene at [Moe's Tavern](https://simpsonswiki.com/wiki/Moe's_Tavern).\n",
@@ -15,12 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -31,15 +24,12 @@
     "data_dir = './data/simpsons/moes_tavern_lines.txt'\n",
     "text = helper.load_data(data_dir)\n",
     "# Ignore notice, since we don't use it for analysing the data\n",
-    "text = text[81:]"
+    "text = text[81:]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Explore the Data\n",
     "Play around with `view_sentence_range` to view different parts of the data."
@@ -47,13 +37,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.251908396946565\n",
+      "Number of lines: 4258\n",
+      "Average number of words in each line: 11.50164396430249\n",
+      "\n",
+      "The sentences 0 to 10:\n",
+      "\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -81,10 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Implement Preprocessing Functions\n",
     "The first thing to do to any dataset is preprocessing.  Implement the following preprocessing functions below:\n",
@@ -101,15 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "from string import punctuation\n",
     "import problem_unittests as tests\n",
     "\n",
     "def create_lookup_tables(text):\n",
@@ -118,8 +131,15 @@
     "    :param text: The text of tv scripts split into words\n",
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
+    "    vocab_to_int = {}\n",
+    "    int_to_vocab = {}\n",
+    "    \n",
+    "    for index, w in enumerate(set(text)):\n",
+    "        vocab_to_int[w] = index\n",
+    "        int_to_vocab[index] = w\n",
+    "     \n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    return (vocab_to_int, int_to_vocab)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -130,10 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Tokenize Punctuation\n",
     "We'll be splitting the script into a word array using spaces as delimiters.  However, punctuations like periods and exclamation marks make it hard for the neural network to distinguish between the word \"bye\" and \"bye!\".\n",
@@ -155,21 +172,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
+    "    d = {\".\":\"||period||\", \",\":\"||comma||\",\"\\\"\":\"||quotation_mark||\", \";\":\"||semicolon||\",\"!\":\"||exclamation_mark||\", \"?\":\"||question_mark||\", \"(\":\"||left_parentheses||\", \")\":\"||right_parenthese||s\", \"--\":\"||dash||\", \"\\n\":\"||return||\"}\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return d\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -179,10 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Preprocess all the data and save it\n",
     "Running the code cell below will preprocess all the data and save it to file."
@@ -190,11 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -207,10 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Check Point\n",
     "This is your first checkpoint. If you ever decide to come back to this notebook or have to restart the notebook, you can start from here. The preprocessed data has been saved to disk."
@@ -218,12 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -238,10 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Build the Neural Network\n",
     "You'll build the components necessary to build a RNN by implementing the following functions below:\n",
@@ -258,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -297,11 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_inputs():\n",
@@ -321,10 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build RNN Cell and Initialize\n",
     "Stack one or more [`BasicLSTMCells`](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/BasicLSTMCell) in a [`MultiRNNCell`](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/MultiRNNCell).\n",
@@ -338,11 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
@@ -364,10 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Word Embedding\n",
     "Apply embedding to `input_data` using TensorFlow.  Return the embedded sequence."
@@ -376,11 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
@@ -403,10 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build RNN\n",
     "You created a RNN Cell in the `get_init_cell()` function.  Time to use the cell to create a RNN.\n",
@@ -419,11 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_rnn(cell, inputs):\n",
@@ -445,10 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build the Neural Network\n",
     "Apply the functions you implemented above to:\n",
@@ -462,11 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size, embed_dim):\n",
@@ -491,10 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Batches\n",
     "Implement `get_batches` to create batches of input and targets using `int_text`.  The batches should be a Numpy array with the shape `(number of batches, 2, batch size, sequence length)`. Each batch contains two elements:\n",
@@ -538,11 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
@@ -565,10 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Neural Network Training\n",
     "### Hyperparameters\n",
@@ -587,9 +550,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -616,10 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Build the Graph\n",
     "Build the graph using the neural network you implemented."
@@ -628,11 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -668,10 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Train\n",
     "Train the neural network on the preprocessed data.  If you have a hard time getting a good loss, check the [forums](https://discussions.udacity.com/) to see if anyone is having the same problem."
@@ -680,11 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -722,10 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Save Parameters\n",
     "Save `seq_length` and `save_dir` for generating a new TV script."
@@ -734,11 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -750,10 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Checkpoint"
    ]
@@ -761,11 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -782,10 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Implement Generate Functions\n",
     "### Get Tensors\n",
@@ -801,11 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_tensors(loaded_graph):\n",
@@ -826,10 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Choose Word\n",
     "Implement the `pick_word()` function to select the next word using `probabilities`."
@@ -838,11 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
@@ -864,10 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Generate TV Script\n",
     "This will generate the TV script for you.  Set `gen_length` to the length of TV script you want to generate."
@@ -876,11 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gen_length = 200\n",
@@ -931,10 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# The TV Script is Nonsensical\n",
     "It's ok if the TV script doesn't make any sense.  We trained on less than a megabyte of text.  In order to get good results, you'll have to use a smaller vocabulary or get more data.  Luckly there's more data!  As we mentioned in the begging of this project, this is a subset of [another dataset](https://www.kaggle.com/wcukierski/the-simpsons-by-the-data).  We didn't have you train on all the data, because that would take too long.  However, you are free to train your neural network on all the data.  After you complete the project, of course.\n",
@@ -959,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   },
   "widgets": {
    "state": {},
@@ -967,5 +876,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
