--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -12,15 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62\n",
-      "['asn1crypto==0.22.0', 'bleach==2.0.0', 'cachecontrol==0.12.3', 'certifi==2017.7.27.1', 'cffi==1.10.0', 'chardet==3.0.4', 'colorama==0.3.9', 'cryptography==2.0.3', 'decorator==4.1.2', 'distlib==0.2.5', 'entrypoints==0.2.3', 'html5lib==0.999999999', 'idna==2.6', 'ipykernel==4.6.1', 'ipython-genutils==0.2.0', 'ipython==6.1.0', 'ipywidgets==7.0.0', 'jedi==0.10.2', 'jinja2==2.9.6', 'jsonschema==2.6.0', 'jupyter-client==5.1.0', 'jupyter-console==5.2.0', 'jupyter-core==4.3.0', 'lockfile==0.12.2', 'markupsafe==1.0', 'mistune==0.7.4', 'msgpack-python==0.4.8', 'nbconvert==5.3.1', 'nbformat==4.4.0', 'notebook==5.0.0', 'numpy==1.13.3', 'packaging==16.8', 'pandocfilters==1.4.2', 'pickleshare==0.7.4', 'pip==9.0.1', 'progress==1.3', 'prompt-toolkit==1.0.15', 'protobuf==3.4.0', 'pycparser==2.18', 'pygments==2.2.0', 'pyopenssl==17.2.0', 'pyparsing==2.2.0', 'pysocks==1.6.7', 'python-dateutil==2.6.1', 'pyzmq==16.0.2', 'qtconsole==4.3.1', 'requests==2.18.4', 'setuptools==36.6.0', 'simplegeneric==0.8.1', 'six==1.11.0', 'tensorflow==1.0.1', 'testpath==0.3.1', 'tornado==4.5.2', 'traitlets==4.3.2', 'urllib3==1.22', 'wcwidth==0.1.7', 'webencodings==0.5.1', 'wheel==0.30.0', 'widgetsnbextension==3.0.2', 'win-inet-pton==1.0.1', 'win-unicode-console==0.5', 'wincertstore==0.2']\n"
+      "72\n",
+      "['asn1crypto==0.22.0', 'backports.weakref==1.0rc1', 'bleach==1.5.0', 'cachecontrol==0.12.3', 'certifi==2017.7.27.1', 'cffi==1.10.0', 'chardet==3.0.4', 'colorama==0.3.9', 'cryptography==2.0.3', 'cycler==0.10.0', 'decorator==4.1.2', 'distlib==0.2.5', 'entrypoints==0.2.3', 'html5lib==0.9999999', 'idna==2.6', 'ipykernel==4.6.1', 'ipython-genutils==0.2.0', 'ipython==6.1.0', 'ipywidgets==7.0.0', 'jedi==0.10.2', 'jinja2==2.9.6', 'jsonschema==2.6.0', 'jupyter-client==5.1.0', 'jupyter-console==5.2.0', 'jupyter-core==4.3.0', 'lockfile==0.12.2', 'markdown==2.6.9', 'markupsafe==1.0', 'matplotlib==2.0.2', 'mistune==0.7.4', 'msgpack-python==0.4.8', 'nbconvert==5.3.1', 'nbformat==4.4.0', 'notebook==5.0.0', 'numpy==1.13.1', 'packaging==16.8', 'pandas==0.20.3', 'pandocfilters==1.4.2', 'pickleshare==0.7.4', 'pip==9.0.1', 'progress==1.3', 'prompt-toolkit==1.0.15', 'protobuf==3.2.0', 'pycparser==2.18', 'pygments==2.2.0', 'pyopenssl==17.2.0', 'pyparsing==2.2.0', 'pysocks==1.6.7', 'python-dateutil==2.6.1', 'pytz==2017.2', 'pyzmq==16.0.2', 'qtconsole==4.3.1', 'requests==2.18.4', 'scikit-learn==0.19.0', 'scipy==0.19.1', 'setuptools==36.5.0.post20170921', 'simplegeneric==0.8.1', 'six==1.10.0', 'tensorflow==1.2.1', 'testpath==0.3.1', 'tornado==4.5.2', 'tqdm==4.15.0', 'traitlets==4.3.2', 'urllib3==1.22', 'wcwidth==0.1.7', 'webencodings==0.5.1', 'werkzeug==0.12.2', 'wheel==0.29.0', 'widgetsnbextension==3.0.2', 'win-inet-pton==1.0.1', 'win-unicode-console==0.5', 'wincertstore==0.2']\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -282,21 +282,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.1\n"
+      "TensorFlow Version: 1.2.1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alexey\\Anaconda3\\envs\\tf\\lib\\site-packages\\ipykernel_launcher.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
+      "C:\\Users\\user\\Anaconda3\\envs\\tf\\lib\\site-packages\\ipykernel_launcher.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
       "  \n"
      ]
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
     "    \"\"\"\n",
     "    inp = tf.placeholder(tf.int32, [None, None], name='input')\n",
     "    t = tf.placeholder(tf.int32, [None, None], name='target')\n",
-    "    learning_rate = tf.placeholder(tf.int32, name = \"learning_rate\")\n",
+    "    learning_rate = tf.placeholder(tf.float32, name = \"learning_rate\")\n",
     "    # TODO: Implement Function\n",
     "    return (inp, t, learning_rate)\n",
     "\n",
@@ -380,11 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -393,8 +399,10 @@
     "    :param rnn_size: Size of RNNs\n",
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([tf.contrib.rnn.DropoutWrapper(tf.contrib.rnn.BasicLSTMCell(rnn_size), output_keep_prob =0.7) for x in range(3)])\n",
+    "    initial_state =  tf.identity(cell.zero_state(batch_size, tf.float32), \"initial_state\")\n",
+    "    \n",
+    "    return (cell, initial_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -413,11 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -427,8 +441,8 @@
     "    :param embed_dim: Number of embedding dimensions\n",
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
+    "    return tf.nn.embedding_lookup(embedding, input_data)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -451,11 +465,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -464,8 +484,10 @@
     "    :param inputs: Input text data\n",
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "     # Run each sequence step through the RNN and collect the outputs\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype = tf.float32)\n",
+    "    final_state = tf.identity(final_state,\"final_state\")\n",
+    "    return outputs, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -489,11 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -505,8 +533,11 @@
     "    :param embed_dim: Number of embedding dimensions\n",
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
+    "    embed = get_embed(input_data, vocab_size, embed_dim)\n",
+    "    outputs, final_state = build_rnn(cell, embed)\n",
+    "    predictions = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None)\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    return (predictions, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -560,11 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -574,8 +611,32 @@
     "    :param seq_length: The length of sequence\n",
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    n_batches = len(int_text) // (seq_length * batch_size)\n",
+    "    int_text = np.array(int_text[:n_batches * (seq_length * batch_size)])\n",
+    "    res = []\n",
+    "\n",
+    "    for n in range(0, n_batches):\n",
+    "        x = []\n",
+    "        y = []\n",
+    "        res.append([x, y])\n",
+    "        start = n * seq_length\n",
+    "\n",
+    "\n",
+    "        for nn in range(0, batch_size):\n",
+    "            xx = []\n",
+    "            yy = []\n",
+    "            start_index = start + n_batches * nn*seq_length\n",
+    "            for nnn in range(0, seq_length):\n",
+    "                xx.append(int_text[start_index])\n",
+    "                if start_index < len(int_text)-1:\n",
+    "                    yy.append(int_text[start_index + 1])\n",
+    "                else:\n",
+    "                    yy.append(int_text[0])\n",
+    "                start_index += 1\n",
+    "            x.append(xx)\n",
+    "            y.append(yy)\n",
+    "\n",
+    "    return np.array(res)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -603,26 +664,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 100\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 128\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 256\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = None\n",
+    "embed_dim = 256\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 25\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 50\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -640,10 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 104,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -688,10 +747,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/21   train_loss = 8.821\n",
+      "Epoch   2 Batch    8/21   train_loss = 6.178\n",
+      "Epoch   4 Batch   16/21   train_loss = 6.245\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
